--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-icon": "^1.0.0",
     "react-icons": "^4.11.0",
+    "react-lite-youtube-embed": "^2.3.52",
     "swiper": "^10.3.1",
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar": "^3.0.5",
