--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "lucide-react": "^0.286.0",
     "next": "13.5.4",
     "next-themes": "^0.2.1",
+    "nextjs-toploader": "^1.6.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-lite-youtube-embed": "^2.3.52",
+    "react-paginate": "^8.2.0",
     "swiper": "^10.3.1",
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar": "^3.0.5",
