--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^4.11.0",
     "react-lite-youtube-embed": "^2.3.52",
     "react-paginate": "^8.2.0",
+    "sonner": "^1.3.1",
     "swiper": "^10.3.1",
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar": "^3.0.5",
