--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "anime",
-  "version": "0.1.0",
+  "name": "website-anime",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.1",
+    "@clerk/themes": "^1.7.9",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
