--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hotkeys-hook": "^4.4.3",
     "react-icons": "^4.11.0",
     "react-lite-youtube-embed": "^2.3.52",
+    "react-loader-spinner": "^6.1.6",
     "react-paginate": "^8.2.0",
     "sonner": "^1.3.1",
     "swiper": "^10.3.1",
