--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^18",
     "react-hotkeys-hook": "^4.4.3",
     "react-icons": "^4.11.0",
+    "react-intersection-observer": "^9.8.1",
     "react-lite-youtube-embed": "^2.3.52",
     "react-loader-spinner": "^6.1.6",
     "react-paginate": "^8.2.0",
