--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-paginate": "^8.2.0",
     "sonner": "^1.3.1",
+    "svix": "^1.21.0",
     "swiper": "^10.3.1",
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar": "^3.0.5",
