--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "react-lite-youtube-embed": "^2.3.52",
     "react-loader-spinner": "^6.1.6",
     "react-paginate": "^8.2.0",
-    "sonner": "^1.3.1",
+    "sonner": "^1.4.41",
     "svix": "^1.21.0",
     "swiper": "^10.3.1",
     "tailwind-merge": "^1.14.0",
@@ -52,6 +52,7 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@types/react": "18.2.79",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
