--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^3.3.0",
+    "js-base64": "^3.7.7",
     "lucide-react": "^0.286.0",
     "next": "14.0.2",
     "next-themes": "^0.2.1",
