chore: mengubah library top loader dari nextjs-toploader ke next-nprogress-bar

--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "js-base64": "^3.7.7",
     "lucide-react": "^0.286.0",
     "next": "14.0.2",
+    "next-nprogress-bar": "^2.3.11",
     "next-themes": "^0.2.1",
-    "nextjs-toploader": "^1.6.4",
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
